写了调度模块和推送模块，还没测试完

--- a/yier-scheduler-executor/src/main/resources/application.properties
+++ b/yier-scheduler-executor/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ### mybatis
 # 开启驼峰命名的自动转换
 mybatis.configuration.map-underscore-to-camel-case=true
+
+### Yier Executor propertie
+yier.boss.ip=127.0.0.1
+yier.boss.port=6668
+yier.time.timeout=20
