--- a/yier-scheduler-executor/pom.xml
+++ b/yier-scheduler-executor/pom.xml
@@ -29,10 +29,10 @@
 
 	<dependencies>
 		<!-- springboot web -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		</dependency> -->
 		
 		<!-- mybatis -->
 		<dependency>
