--- a/yier-scheduler-boss/src/main/resources/application.properties
+++ b/yier-scheduler-boss/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates
 
 ### datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yier?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yier?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,3 +23,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ### mybatis
 # 开启驼峰命名的自动转换
 mybatis.configuration.map-underscore-to-camel-case=true
+# mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
