--- a/yier-scheduler-executor/src/main/resources/application.properties
+++ b/yier-scheduler-executor/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8081
+server.port=0
 server.servlet.context-path=/yier-scheduler-executor
 
 ### freemarker
@@ -15,14 +15,16 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates
 
 ### datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yier?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/yier?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=30000
 
 ### mybatis
 # 开启驼峰命名的自动转换
 mybatis.configuration.map-underscore-to-camel-case=true
+# mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 ### Yier Executor propertie
 yier.boss.ip=127.0.0.1
