--- a/yier-scheduler-utils/src/main/resources/application.properties
+++ b/yier-scheduler-utils/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ### mybatis
 # 开启驼峰命名的自动转换
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
